# GUIEditor

./: .gitignore  CMakeLists.txt  Makefile  build.bat  main-ttf.scratch  toolchain.cmake
OpenGLImpl/: Makefile
OpenGLImpl/dependencies/glad/include/glad/: glad.h
OpenGLImpl/dependencies/sndfile/debug/lib/: sndfile.lib
OpenGLImpl/examples/ListenerExample/: CMakeLists.txt  main.cpp
OpenGLImpl/include/: Mesh.h  Model.h  Renderer.h  Shader.h  VertexBuffer.h  VertexBufferLayout.h
OpenGLImpl/src/: Camera.cpp  VAO.cpp  VertexBuffer.cpp  Window.cpp  main.cpp
dependencies/glad/src/: glad.c
dependencies/sndfile/: CONTROL
dependencies/sndfile/debug/lib/pkgconfig/: sndfile.pc
dependencies/sndfile/lib/pkgconfig/: sndfile.pc
dependencies/sndfile/share/SndFile/: SndFileConfig.cmake  SndFileTargets-debug.cmake  SndFileTargets-release.cmake  SndFileTargets.cmake
dependencies/sndfile/share/libsndfile/: vcpkg.spdx.json  vcpkg_abi_info.txt
examples/: CMakeLists.txt
examples/FuncPlot/: CMakeLists.txt  main.cpp
examples/ListenerExample/: CMakeLists.txt  ListenerExample.cpp  ListenerExample.h  Makefile  main.cpp
examples/Pong/: CMakeLists.txt
examples/RelWidget/: CMakeLists.txt  main.cpp
examples/RelWidgetEx/: CMakeLists.txt  main.cpp
examples/SubWidget/: CMakeLists.txt  main.cpp
examples/SubWidgetEx/: CMakeLists.txt  main.cpp
examples/Widget/: CMakeLists.txt  main.cpp
examples/WidgetEx/: CMakeLists.txt  main.cpp
examples/WindowListener/: CMakeLists.txt  WindowListener.cpp  WindowListener.h  main.cpp
examples/WindowListenerEx/: CMakeLists.txt  WindowListenerEx.cpp  WindowListenerEx.h  main.cpp
include/: Camera.h  Container.h  Frame.h  GLDebug.h  GLFWTypeConv.h  Gui.h  GuiListener.h  GuiState.h  GuiTypes.h  IndexBuffer.h  KeyboardController.h  Layout.h  Mesh.h  Rect.h  RelAttr.h  RelAttribute.h  RelPosAttr.h  RelSizeAttr.h  Renderer.h  Shader.h  Texture.h  Transform.h  VecTypes.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Widget.h  Window.h  Window.h~  WindowListener.h  WindowManager.h
res/models/plane/: plane.gltf
res/shaders/: 2DBaseColor.shader  2DRoundBevel.shader  2DTexture.shader  2DVertexColor.shader  3DTexture.shader
scripts/: Makefile  Win64Makefile  build.bat  run  runWin64
src/: Camera.cpp  Container.cpp  EBO.cpp  Frame.cpp  GLDebug.cpp  Gui.cpp  IndexBuffer.cpp  Layout.cpp  Mesh.cpp  Model.cpp  Rect.cpp  RelAttr.cpp  RelAttribute.cpp  RelPosAttr.cpp  RelSizeAttr.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Transform.cpp  VBO.cpp  VertexArray.cpp  VertexBuffer.cpp  Widget.cpp  Window.cpp  WindowManager.cpp  main.cpp
